name:                yi-agda
version:             0.1.0.0
synopsis:            Agda mode for Yi
description:         Agda mode for Yi. For now it requires ‘agda’ executable
                     to be available at runtime.
homepage:            https://github.com/Fuuzetsu/yi-agda
license:             GPL-3
license-file:        LICENSE
author:              Mateusz Kowalczyk
maintainer:          fuuzetsu@fuuzetsu.co.uk
copyright:           © Mateusz Kowalczyk, 2014
category:            Yi
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Yi.Mode.Agda

  build-depends:
      base >=4 && <5
    , yi
    , yi-rope

  hs-source-dirs:      src
  default-language:    Haskell2010